--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="status">
                 <center>
-                    <h3>QU | CHAT ROOM</h3>
+                    <h3>QUE | CHAT ROOM</h3>
                     <span></span><p><strong id="handle"></strong>, WELCOME!</p>
                 </center>
             </div>
